Updated demo data

--- a/JsRenderContactList/Views/Home/Index.cshtml
+++ b/JsRenderContactList/Views/Home/Index.cshtml
@@ -11,12 +11,8 @@
         <div class="content-wrapper">
             <hgroup class="title">
                 <h1>
-                    Client Side Templates using jsRender</h1>
+                    Client Side Templates using JsRender</h1>
             </hgroup>
-            <p>
-                ASP.NET Web API allows you to expose your applications, data and services to the
-                web directly over HTTP.
-            </p>
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
